# Chess

./: .gitignore  CMakeLists.txt
executables/: scacchiera.cpp  test.cpp
include/: Board.h  Direction.h  Move.h  Piece.h  Position.h
include/AI/: Computer.h  DepthComputer.h  RandomComputer.h
include/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/: Board.cpp  Direction.cpp  Move.cpp  Piece.cpp  position.cpp
src/AI/: Computer.cpp  DepthComputer.cpp  RandomComputer.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
